--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@ h2 {
 h1 {
   color: #f1f1f0; }
 
+.titulo-1, .titulo-2, .titulo-3, .titulo-4 {
+  color: blue; }
+
 #titulo-1 {
   background: black;
   background: linear-gradient(90deg, #0d0e0e 0%, rgba(170, 176, 170, 0.316964) 0%, #393b3b 0%, rgba(166, 165, 157, 0) 100%, rgba(153, 168, 165, 0) 100%);
@@ -53,7 +56,7 @@ a:hover {
   color: #646161;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1);
   text-decoration: none;
-  display: inline-block; }
+  display: block; }
 
 a:visited {
   color: #6d6a6a; }
@@ -63,7 +66,7 @@ a:active {
   color: black; }
 
 p::first-line {
-  color: #080808;
+  color: red;
   font-variant: small-caps; }
 
 @media (max-inline-size: 768px) {
