--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -1,1 +1,21 @@
 
+$color-titulo: rgb(241, 241, 240);
+$color-de-fondo: black;
+$color-titulos: blue;
+$fuente-altura: 30px;
+    
+$color-gris: #333;
+$fuente-principal: 'Open Sans', sans-serif;
+
+h2 {
+    color: $color-titulos
+    
+    
+
+}
+
+h1{ 
+        color: $color-titulo
+}
+
+.titulo-1, .titulo-2, .titulo-3, .titulo-4   { color: $color-titulos}
