--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@
 	font-family: 'PT Serif', serif;
 }
 #titulo-2 {
-	background: rgb(177,196,195);
+	background: black;
 	background: linear-gradient(90deg, rgb(13, 14, 14) 0%, rgba(170,176,170,0.3169642857142857) 0%, rgb(57, 59, 59) 0%, rgba(166,165,157,0) 100%, rgba(153,168,165,0) 100%);
 	justify-content: center;
 	display: flex;
@@ -27,7 +27,7 @@
 	font-family: 'PT Serif', serif;
 }
 #titulo-3 {
-	background: rgb(177,196,195);
+	background: black;
 	background: linear-gradient(90deg, rgb(13, 14, 14) 0%, rgba(170,176,170,0.3169642857142857) 0%, rgb(57, 59, 59) 0%, rgba(166,165,157,0) 100%, rgba(153,168,165,0) 100%);
 	justify-content: center;
 	display: flex;
@@ -37,7 +37,7 @@
 	font-family: 'PT Serif', serif;
 }
 #titulo-4 {
-	background: rgb(177,196,195);
+	background: black;
 	background: linear-gradient(90deg, rgb(13, 14, 14) 0%, rgba(170,176,170,0.3169642857142857) 0%, rgb(57, 59, 59) 0%, rgba(166,165,157,0) 100%, rgba(153,168,165,0) 100%);
 	justify-content: center;
 	align-items: center;
@@ -45,7 +45,7 @@
 	margin: auto;
 	padding: auto;
 	font-family: 'Lora', serif;
-	font-family: 'PT Serif', serif;
+	font-family: 'PT Serif', serif
 	
 }
 a {
