--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   font-family: 'PT Serif', serif; }
 
 #titulo-2 {
-  background: #b1c4c3;
+  background: black;
   background: linear-gradient(90deg, #0d0e0e 0%, rgba(170, 176, 170, 0.316964) 0%, #393b3b 0%, rgba(166, 165, 157, 0) 100%, rgba(153, 168, 165, 0) 100%);
   justify-content: center;
   display: flex;
@@ -21,7 +21,7 @@
   font-family: 'PT Serif', serif; }
 
 #titulo-3 {
-  background: #b1c4c3;
+  background: black;
   background: linear-gradient(90deg, #0d0e0e 0%, rgba(170, 176, 170, 0.316964) 0%, #393b3b 0%, rgba(166, 165, 157, 0) 100%, rgba(153, 168, 165, 0) 100%);
   justify-content: center;
   display: flex;
@@ -31,7 +31,7 @@
   font-family: 'PT Serif', serif; }
 
 #titulo-4 {
-  background: #b1c4c3;
+  background: black;
   background: linear-gradient(90deg, #0d0e0e 0%, rgba(170, 176, 170, 0.316964) 0%, #393b3b 0%, rgba(166, 165, 157, 0) 100%, rgba(153, 168, 165, 0) 100%);
   justify-content: center;
   align-items: center;
